--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,34 +1,48 @@
-name: Build and Deploy to gh-pages
+name: CI/CD
 
 on:
-  push:
-    branches:
-      - master
+    push:
+        branches: [master]
+    pull_request:
+        branches: [master]
 
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+    build:
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+        strategy:
+            matrix:
+                node-version: [12.x]
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: npm install
+            - name: Set up Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v1
+              with:
+                  node-version: ${{ matrix.node-version }}
 
-      - name: Build
-        run: npm run build  # Replace with your build command
+            - name: Install dependencies
+              run: npm install
 
-      - name: Deploy to gh-pages
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git checkout -b gh-pages
-          git add .
-          git commit -m "Deploy to gh-pages"
-          git push origin gh-pages
+            - name: Run the tests and generate coverage report
+              run: npm test -- --coverage
+
+            - name: Upload coverage to Codecov
+              uses: codecov/codecov-action@v1
+
+            - name: Build
+              run: npm run build
+
+            - name: Deploy
+              run: |
+                  git config --global user.name $user_name
+                  git config --global user.email $user_email
+                  git remote set-url origin https://${github_token}@github.com/${repository}
+                  npm run deploy
+              env:
+                  user_name: 'github-actions[bot]'
+                  user_email: 'github-actions[bot]@users.noreply.github.com'
+                  github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
+                  repository: ${{ github.repository }}
